// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grommet custom theme 1`] = `
.c4 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: rgb(65,86,166);
  stroke: rgb(65,86,166);
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c4 *[stroke*="#"],
.c4 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*="#"],
.c4 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c7 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: custom;
  stroke: custom;
}

.c7 g {
  fill: inherit;
  stroke: inherit;
}

.c7 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c7 *[stroke*="#"],
.c7 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c7 *[fill-rule],
.c7 *[FILL-RULE],
.c7 *[fill*="#"],
.c7 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c10 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: rgb(24,192,221);
  stroke: rgb(24,192,221);
}

.c10 g {
  fill: inherit;
  stroke: inherit;
}

.c10 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c10 *[stroke*="#"],
.c10 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c10 *[fill-rule],
.c10 *[FILL-RULE],
.c10 *[fill*="#"],
.c10 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #323232;
  color: #eeeeee;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 12px;
}

.c2 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: rgb(65,86,166);
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: custom;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c6:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: rgb(24,192,221);
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c9:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 {
  font-family: Open Sans;
  font-size: 14;
  line-height: 24px;
  background-color: rgb(255,255,255);
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <a
      className="c2"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <span
        className="c3"
        style={
          Object {
            "display": "inline-flex",
          }
        }
      >
        <svg
          aria-label="Add"
          className="c4"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,22 L12,2 M2,12 L22,12"
            fill="none"
            stroke="#000"
            strokeWidth="2"
          />
        </svg>
        <span
          className="c5"
        />
        Add
      </span>
    </a>
    <a
      className="c6"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <span
        className="c3"
        style={
          Object {
            "display": "inline-flex",
          }
        }
      >
        <svg
          aria-label="Add"
          className="c7"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,22 L12,2 M2,12 L22,12"
            fill="none"
            stroke="#000"
            strokeWidth="2"
          />
        </svg>
        <span
          className="c5"
        />
        Add
      </span>
    </a>
  </div>
  <div
    className="c8"
  >
    <a
      className="c9"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <span
        className="c3"
        style={
          Object {
            "display": "inline-flex",
          }
        }
      >
        <svg
          aria-label="Add"
          className="c10"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,22 L12,2 M2,12 L22,12"
            fill="none"
            stroke="#000"
            strokeWidth="2"
          />
        </svg>
        <span
          className="c5"
        />
        Add
      </span>
    </a>
    <a
      className="c6"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <span
        className="c3"
        style={
          Object {
            "display": "inline-flex",
          }
        }
      >
        <svg
          aria-label="Add"
          className="c7"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,22 L12,2 M2,12 L22,12"
            fill="none"
            stroke="#000"
            strokeWidth="2"
          />
        </svg>
        <span
          className="c5"
        />
        Add
      </span>
    </a>
  </div>
</div>
`;

exports[`Grommet dark theme 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #FD6FFF;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #60EB9F;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #60EBE1;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #333333;
  color: #eeeeee;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #555555;
  color: #eeeeee;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #777777;
  color: #eeeeee;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #999999;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #FFCA58;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #F8F8F8;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #F2F2F2;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #EDEDED;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #DADADA;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #EB6060;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #01C781;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #6095EB;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #FF3333;
  color: #eeeeee;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #a8a8a8;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #7DD892;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #F7E464;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  font-size: 34px;
  line-height: 40px;
  max-width: 816px;
  font-weight: 600;
}

.c0 {
  font-family: Arial;
  font-size: 18px;
  line-height: 24px;
  background-color: #111111;
  color: #eeeeee;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:768px) {
  .c2 {
    font-size: 26px;
    line-height: 32px;
    max-width: 624px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      accent-1
    </h1>
  </div>
  <div
    className="c3"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      accent-2
    </h1>
  </div>
  <div
    className="c4"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      accent-3
    </h1>
  </div>
  <div
    className="c1"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      brand
    </h1>
  </div>
  <div
    className="c5"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      dark-1
    </h1>
  </div>
  <div
    className="c6"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      dark-2
    </h1>
  </div>
  <div
    className="c7"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      dark-3
    </h1>
  </div>
  <div
    className="c8"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      dark-4
    </h1>
  </div>
  <div
    className="c8"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      dark-5
    </h1>
  </div>
  <div
    className="c8"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      dark-6
    </h1>
  </div>
  <div
    className="c9"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      focus
    </h1>
  </div>
  <div
    className="c10"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      light-1
    </h1>
  </div>
  <div
    className="c11"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      light-2
    </h1>
  </div>
  <div
    className="c12"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      light-3
    </h1>
  </div>
  <div
    className="c13"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      light-4
    </h1>
  </div>
  <div
    className="c13"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      light-5
    </h1>
  </div>
  <div
    className="c13"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      light-6
    </h1>
  </div>
  <div
    className="c14"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      neutral-1
    </h1>
  </div>
  <div
    className="c15"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      neutral-2
    </h1>
  </div>
  <div
    className="c16"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      neutral-3
    </h1>
  </div>
  <div
    className="c17"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      status-critical
    </h1>
  </div>
  <div
    className="c18"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      status-disabled
    </h1>
  </div>
  <div
    className="c19"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      status-ok
    </h1>
  </div>
  <div
    className="c18"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      status-unknown
    </h1>
  </div>
  <div
    className="c20"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      status-warning
    </h1>
  </div>
</div>
`;

exports[`Grommet default theme 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #6FFFB0;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #FD6FFF;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #81FCED;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #333333;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #555555;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #777777;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #999999;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #F8F8F8;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #F2F2F2;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #EDEDED;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #DADADA;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #00873D;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #3D138D;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #00739D;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #FF4040;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #CCCCCC;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #00C781;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #FFAA15;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  font-size: 34px;
  line-height: 40px;
  max-width: 816px;
  font-weight: 600;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:768px) {
  .c2 {
    font-size: 26px;
    line-height: 32px;
    max-width: 624px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      accent-1
    </h1>
  </div>
  <div
    className="c3"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      accent-2
    </h1>
  </div>
  <div
    className="c4"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      accent-3
    </h1>
  </div>
  <div
    className="c5"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      brand
    </h1>
  </div>
  <div
    className="c6"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      dark-1
    </h1>
  </div>
  <div
    className="c7"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      dark-2
    </h1>
  </div>
  <div
    className="c8"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      dark-3
    </h1>
  </div>
  <div
    className="c9"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      dark-4
    </h1>
  </div>
  <div
    className="c9"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      dark-5
    </h1>
  </div>
  <div
    className="c9"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      dark-6
    </h1>
  </div>
  <div
    className="c1"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      focus
    </h1>
  </div>
  <div
    className="c10"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      light-1
    </h1>
  </div>
  <div
    className="c11"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      light-2
    </h1>
  </div>
  <div
    className="c12"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      light-3
    </h1>
  </div>
  <div
    className="c13"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      light-4
    </h1>
  </div>
  <div
    className="c13"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      light-5
    </h1>
  </div>
  <div
    className="c13"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      light-6
    </h1>
  </div>
  <div
    className="c14"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      neutral-1
    </h1>
  </div>
  <div
    className="c15"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      neutral-2
    </h1>
  </div>
  <div
    className="c16"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      neutral-3
    </h1>
  </div>
  <div
    className="c17"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      status-critical
    </h1>
  </div>
  <div
    className="c18"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      status-disabled
    </h1>
  </div>
  <div
    className="c19"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      status-ok
    </h1>
  </div>
  <div
    className="c18"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      status-unknown
    </h1>
  </div>
  <div
    className="c20"
  >
    <h1
      className="c2"
      size="small"
      style={
        Object {
          "fontFamily": "soleil, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "maxWidth": "100vw",
          "textTransform": "false",
        }
      }
    >
      status-warning
    </h1>
  </div>
</div>
`;
